Fixes navbar brand margin-end for centering on mobile.

--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -1,4 +1,5 @@
 $offcanvas-horizontal-width: "275px";
+$navbar-brand-margin-end: "0px";
 
 // Add Bootstrap overrides here:
 @import "../../node_modules/bootstrap/scss/bootstrap";
